@@ -58,16 +58,38 @@ class installActions extends sfActions
 				$username 	= $config['mysql_username'];
 				$password 	= $config['mysql_password'];
 				$dbname 	= $config['mysql_dbname'];
-				$this->_generateConfigFile($host, $username, $password, $dbname);
-				$this->getContext()->getConfigCache()->clear();
+
+				if ($this->_checkMySQLConnection($host, $username, $password, $dbname))
+				{
+					$this->_generateConfigFile($host, $username, $password, $dbname);
+					$this->getContext()->getConfigCache()->clear();
+					$this->_executeSQLFile('../doc/piwam-install.sql');
+					$this->redirect('install/end');
+				}
+				else {
+					$this->getUser()->setFlash('error', 'Impossible de se connecter à la base de données');
+				}
 			}
         }
+	}
+
+	/**
+	 * Display end view, once configuration is complete.
+	 *
+	 * @param 	sfWebRequest $request
+	 * @since	r83
+	 */
+	public function executeEnd(sfWebRequest $request)
+	{
+		// just display static template
 	}
 
 	/*
 	 * Write new content of config file. Search occurences of string we want
 	 * to match, and then replace the line by a new one.
 	 * We flush the new content to the file at the end
+	 *
+	 * @todo extend to others DBMS
 	 */
 	private function _generateConfigFile($server, $username, $password, $dbname)
 	{
@@ -149,6 +171,47 @@ class installActions extends sfActions
 		);
 
 		$this->_messages[] = $newEntry;
+	}
+
+	/*
+	 * Check if MySQL settings are allright or not
+	 *
+	 * @todo extend to others DBMS
+	 */
+	private function _checkMySQLConnection($host, $user, $password, $dbname)
+	{
+		$link = mysql_connect($host, $user, $password);
+		if (! $link) {
+			return false;
+		}
+		else
+		{
+			$isConnected = mysql_select_db($dbname, $link);
+			if ($isConnected)
+			{
+				//mysql_close();
+				return true;
+			}
+			else {
+				return false;
+			}
+		}
+	}
+
+	/*
+	 * Launch a SQL file (execute all the queries).
+	 * This is a very simple SQL file executor
+	 *
+	 * @todo Improve
+	 */
+	private function _executeSQLFile($file)
+	{
+		$content = file_get_contents($file);
+		$queries = explode(';', $content);
+
+		foreach ($queries as $query) {
+			mysql_query($query);
+		}
 	}
 
 	/*
